# nsd_reservations

./: MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt  setup.py
nsd_reservations/: __init__.py  app.py  hooks.py  install.py  modules.txt  setup.py
nsd_reservations/config/: desktop.py
nsd_reservations/meeting_management/custom/: reservation_approved.json  reservation_rejected.json  reservation_submit_for_approval.json
nsd_reservations/meeting_management/doctype/meeting_room/: meeting_room.js  meeting_room.json  meeting_room.py  test_meeting_room.py
nsd_reservations/meeting_management/doctype/room_reservation/: __init__.py  meeting_reservation_approval.json  room_reservation.js  room_reservation.json  room_reservation.py  test_room_reservation.py
nsd_reservations/meeting_management/page/meeting_roster/: meeting_roster.css  meeting_roster.js  meeting_roster.json
nsd_reservations/meeting_management/report/room_reservation_summary/: room_reservation_summary.json  room_reservation_summary.py
nsd_reservations/meeting_management/role/meeting_room_manager/: meeting_room_manager.json
nsd_reservations/meeting_management/role/meeting_room_user/: meeting_room_user.json
nsd_reservations/meeting_management/workflow/meeting_reservation_approval/: meeting_reservation_approval.json
nsd_reservations/meeting_management/workspace/meeting_management/: meeting_management.json
nsd_reservations/public/js/: bundle.json  meeting_room.js  room_reservation.js
